css/style.css
/* @import url('https://fonts.googleapis.com/css?family=Playfair+Display:400,400i,700,700i,900&display=swap'); */
@import url('https://fonts.googleapis.com/css?family=Acme&display=swap');
/* @import url('https://fonts.googleapis.com/css?family=Rubik+Mono+One&display=swap');
@import url('https://fonts.googleapis.com/css?family=Permanent+Marker&display=swap');
@import url('https://fonts.googleapis.com/css?family=Alfa+Slab+One&display=swap'); */
@import url('https://fonts.googleapis.com/css?family=Caveat:400,700&display=swap');
@import url('https://fonts.googleapis.com/css?family=Domine&display=swap');
@import url('https://fonts.googleapis.com/css?family=Archivo+Black&display=swap');
@import url('https://fonts.googleapis.com/css?family=IBM+Plex+Sans:100,100i,300,300i,700,700i&display=swap');


:root{
    --color-one: rgb(255, 230, 91);
    --color-two: rgb(50, 0, 55);
    --color-three: rgb(201, 127, 114);
    --color-four: #328598;
    --color-five: rgb(150, 0, 167);
    --color-six: rgb(60, 108, 93);
    --color-seven: rgb(249, 244, 241);
    --caption-color: #53dfff7b;

    --font-one: 'Acme', 'Courier New', monospace;
    --font-two: 'Caveat', cursive;
    --font-three: 'Domine', sans-serif;
    --font-four: 'IBM Plex Sans', sans-serif;
}


body {
    font-family: var(--font-four);
    background-color: var(--color-four);
    margin: 0px;
    width: 100vw;
    overflow-x: hidden;
    transition: all 0.5s;
    scroll-behavior: smooth;
}

/* TOP TEXT */

h1 {
    margin: 0px;
    font-family: var(--font-four);
    color: var(--color-seven);
    /* text-shadow: 10px 10px 0px var(--color-five); */
    font-size: 4em;
    font-weight: 700;
    font-style: italic;
    line-height: 0.9em;
}

h1 small {
    font-family: var(--font-two);
    font-size: 0.6em;
    color: var(--color-two);
    text-shadow: 0px 0px 0px;
    font-weight: 400;
}

/* NAV */

h2 {
    font-size: 2em;
    font-family: var(--font-four);
    color: var(--color-five);
    font-weight: 100;
    font-style: italic;
}

/* POST TITLES */

h3 {
    font-family: var(--font-four);
    color: var(--color-seven);
    font-size: 2em;
}

/* POST DATES */

h4 {
    font-size: 3em;
    font-family: var(--font-two);
    margin: 0px;
}

/* CAPTIONS */

h5 {
    font-family: var(--font-four);
    font-size: 1.5em;
    font-weight: 100;
    font-style: italic;
    margin: 0px;
}

/* FOOTER */

h2#footer {
    font-size: 1.8em;
    font-family: var(--font-four);
    color: var(--color-five);
    font-weight: 100;
    font-style: italic;
}

/* TEXT POSTS & ABOUT */

p {
    font-family: var(--font-four);
    font-size: 2em;
    font-weight: 100;

}

/* LINK COLORS */

a:link {
    color: var(--color-one);
}

a:hover {
    color: var(--color-five);
}

a:active {
    color: var(--color-seven);
}

a:visited {
    color: var(--color-one);
}

img {
    max-width: 100%;
}

.container {
    display: block;
    margin: 0px;
    padding: 0px;
    width: 100vw;
}

.foundation {
    display: block;
    position: absolute;
    top: 10vh;
    left: 10vw;
    text-align: left;
    z-index: -500;
}

.top {
    position: relative;
    display: block;
    margin-left: auto;
    margin-right: auto;
    text-align: center;
    margin-top: 0px;
    height: 100vh;
    z-index: -500;
}

.bg {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100vw;
    height: 120vh;
    /* height: 200vh; */
    background-image: url('../img/titlebg.png');
    background-size: auto 105%;
    background-repeat: no-repeat;
    background-position-x: center;
    z-index: -500;
    overflow: visible;
}

.nav {
    margin-top: -69px;
    display: block;
    position: relative;
    max-width: 500px;
    height: 70px;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: -1px;
}

.nav a {
    color: inherit;
    text-decoration: inherit;
}

.navBlock {
    display: inline-block;
    text-align: center;
    position: relative;
    vertical-align: bottom;
    width: 165px;
    margin-left: 20px;
    margin-right: 20px;
    padding-left: 20px;
    padding-right: 20px;
    border-radius: 30px 30px 0px 0px;
}

.navOne {
    background-color: var(--color-three);
}

.navTwo {
    background-color: var(--color-six);
}

.navBlock h2 {
    line-height: 0.5em;
    text-decoration: none;
    color: var(--color-one);
}

.navBlock h2:hover {
    color: var(--color-five);
    cursor: pointer;
}

.navBlock h2:active {
    color: var(--color-seven);
    cursor: pointer;
}

.mainColumn {
    display: block;
    left: 0;
    right: 0;
    max-width: 720px;
    padding-left: 30px;
    padding-right: 30px;
    padding-top: 30px;
    padding-bottom: 30px;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 0px;
    background-color: var(--color-three);
    border-radius: 50px;
    border: 10px dotted var(--color-two);
    z-index: 0;
}

.archive {
    display: block;
    position: relative;
    max-width: 500px;
    left: 0;
    right: 0;
    margin-left: auto;
    margin-right: auto;
    z-index: 0;
}

.archiveBlock {
    display: block;
    position: relative;
}

.titleBlock {
    position: relative;
    /* text-shadow: -3px -2px 0px var(--color-two); */
    z-index: 10;
    animation: title-float 3s ease-in-out infinite alternate 
}

.blockDate {
    display: inline-block;
    position: relative;
    top: 0px;
    left: 0px;
    width: 40px;
    height: 120px;
    vertical-align: top;
}

.blockContent {
    display: inline-block;
    position: relative;
    top: 0px;
    left: 0px;
    margin-left: 40px;
    width: 400px;
    vertical-align: top;
}

/* POST BACKGROUND IMAGES, in a pseudo elements after the date to keep them in place */

.videoBlock .blockDate::after {
    content: '';
    display: block;
    position: absolute;
    background-image: url('../img/videobg2.png');
    background-size: 720px;
    width: 720px;
    height: 500px;
    margin-left: -80px;
    margin-top: -280px;
    z-index: -1;
}

.imgBlock .blockDate::after {
    content: '';
    display: block;
    position: absolute;
    background-image: url('../img/imagebg2.png');
    background-size: 720px;
    background-repeat: no-repeat;
    width:720px;
    height: 500px;
    margin-left: -33px;
    margin-top: -188px;
    z-index: -1;
}

.textBlock .blockDate::after {
    content: '';
    display: block;
    position: absolute;
    background-image: url('../img/textbg2.png');
    background-size: 600px;
    background-repeat: no-repeat;
    width:720px;
    height: 500px;
    margin-left: -160px;
    margin-top: -230px;
    z-index: -1;
}

.audioBlock .blockDate::after {
    content: '';
    display: block;
    position: absolute;
    background-image: url('../img/audiobg1.png');
    background-size: 600px;
    background-repeat: no-repeat;
    width:720px;
    height: 500px;
    margin-left: -60px;
    margin-top: -200px;
    z-index: -1;
}

.videoBlock .blockContent {
    border-radius: 20px;
    overflow: hidden;
}

.videoBlock .blockContent iframe {
    width: 400px;
    height: 300px;
    border: 0px;
}

.audioBlock {
    height: auto;
}

.audioBlock .blockContent {
    width: 400px;
    height: 440px;
    
}

.audioBlock .audioWrapper {
    width: 400px;
    height: 100px;
    border-radius: 40px;
    overflow: hidden;
    transform-origin: 0% 100%;
    border: 10px dashed var(--color-five);
    margin-top: -100px;
}

.audioBlock .blockContent iframe {
    width: 400px;
    height: 100px;
    filter: contrast(2);
    filter: sepia(60%);
    border: 0px;
}

.imgBlock .blockContent {
    height: auto;
}

.imgBlock img {
    display: block;
    position: relative;
    border-radius: 5px;
    margin-left: 10px;
    width: 400px;
    
}

.textBlock .blockContent {
    transform-origin: 0% 0%;
    margin-top: -30px;
}

.textBlock p {
    font-weight: 300;
}

.blockDate .month, .day, .year {
    width: 40px;
    height: 40px;
    display: inline-block;
    position: relative;
    animation: date-float 2s ease-in-out infinite alternate;
    will-change: transform;
}

.blockCaption {
    display: inline-block;
    position: relative;
    margin-left: 20%;
    margin-right: 5%;
    margin-top: 40px;
    margin-bottom: 40px;
    padding: 20px;
    background-color: ;
    border-radius: 10px;
}

.garden {
    display: none;
    color: var(--color-seven);
}

.bottom-wrapper {
    display: block;
    position: relative;
    margin-left: auto;
    margin-right: auto;
    max-width: 720px;
}
.bottom-tab {
    display: block;
    position: relative;
    background-color: var(--color-two);
    border-radius: 0px 0px 30px 30px;
    padding-left: 20px;
    padding-right: 20px;
    padding-top: 10px;
    max-width: 60%;
    height: 50px;
    margin-left: auto;
    margin-right: auto;
    z-index: 0;
    text-align: center;
}

.bottom-tab h2 {
    margin: 0px;
}

.bottom-tab a {
    text-decoration: inherit;
}

.text-shadow {
    text-shadow: -4px -4px 0px var(--color-two);
}

.box-shadow {
    box-shadow: -20px 10px 0px var(--color-two);
}

.nav-shadow {
    box-shadow: -20px 12px 0px var(--color-two);
}

@keyframes title-float {
    from {
        transform: translateY(0px);
    }
    to {
        transform: translateY(-20px);
    }
}

@keyframes date-float {
    from {
        transform: translateX(-2px);
        transform: rotate(5deg);
    }
    to {
        transform: translateX(2px);
        transform: rotate(-5deg);
    }
}

@media only screen and (max-width: 700px){
    h1 {
        font-size: 2em;
        /* text-shadow: 5px 5px 0px var(--color-five); */
    }
    h2 {
        font-size: 1em;
    }

    h4 {
        font-size: 2em;
    }

    .foundation {
        top: 10vh;
        left: 10vw;
    }

    .nav {
        height: 35px;
        margin-top: -34px;
        max-width: 250px;
    }

    .navBlock {
        width: 60px;
        height: 35px;
        margin-left: 10px;
        margin-right: 10px;
    }

    .archive {
        max-width: 300px;
    }

    

    .blockContent {
        width: 200px;
        margin-left: 0px;
    }

    .videoBlock .blockContent iframe {
        width: 200px;
        height: 150px;
    }

    .videoBlock .blockDate::after {
        content: '';
        display: inline-block;
        position: absolute;
        background-size: 360px;
        width: 360px;
        height: 250px;
        margin-left: -80px;
        margin-top: -140px;
        z-index: -1;
    }

    .imgBlock .blockDate::after {
        content: '';
        display: inline-block;
        position: absolute;
        background-size: 375px;
        width: 375px;
        height: 250px;
        margin-left: -57px;
        margin-top: -100px;
        z-index: -1;
    }

    .textBlock .blockDate::after {
        content: '';
        display: inline-block;
        position: absolute;
        background-size: 375px;
        width: 375px;
        height: 350px;
        margin-left: -127px;
        margin-top: -120px;
        z-index: -1;
    }


    .audioBlock .blockContent {
        width: 400px;
        height: 270px;
    }

    .audioBlock .audioWrapper {
        width: 400px;
        height: 100px;
        margin-top: -250px;
        margin-left: 40px;
    }

    .audioBlock .blockContent iframe {
        width: 400px;
        height: 100px;
    }

    .textBlock .blockContent {
        position: relative;
        width: 190px;
        font-size: 0.75em;
        margin-left: 20px;
        margin-top: -20px;
    }

    .text-shadow {
        text-shadow: -4px -1.5px 0px var(--color-two);
    }
}

